updated css, js, html

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
         <p>But lest you think we're vain</p>
           We know you're all robots and we don't care
         <p>Tenacious D,</p> we reign! "</h3>
-        </h3>
       </div>
       <div id="footer">
-        <h4><a href="https://en.wikipedia.org/wiki/Tenacious_D">~The D</a></h4>
+        <h4><a href="https://en.wikipedia.org/wiki/Tenacious_D">~The D~</a></h4>
       </div>
 
     </div>
