--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>Tenacious D,</p> we reign! "</h3>
       </div>
       <div id="footer">
-        <h4><a href="https://en.wikipedia.org/wiki/Tenacious_D">~The D~</a></h4>
+        <h4><a href="https://en.wikipedia.org/wiki/Tenacious_D" target="_blank">~The D~</a></h4>
       </div>
 
     </div>
